--- a/templates/upload.html
+++ b/templates/upload.html
@@ -13,7 +13,7 @@
         </header>
 
         <div class="upload-box">
-            <h2>Select a PDF contract to upload:</h2>
+            <h2> Please select a PDF contract to upload:</h2>
             <form action="{{ url_for('upload_file') }}" method="post" enctype="multipart/form-data">
                 <input type="file" name="filename" accept=".pdf" required>
                 <input type="submit" value="Upload File">
