--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,7 @@ h1 {
     margin-bottom: 30px;
     line-height: 1.5;
 }
+        
 
 .button {
     background: #5B8BC5;
@@ -52,6 +53,13 @@ h1 {
     background: #3E6FB1;
 }
 
+.warning {
+    font-size: 30px;
+    margin-bottom: 30px;
+    line-height: 1.5;
+
+}
+        
 footer {
     margin-top: 30px;
     font-size: 14px;
@@ -72,10 +80,14 @@ footer {
 
         <p class="tagline">
             <h3>LexBase is your smart legal assistant for reviewing rental agreements in the UK.</h3> 
-            Upload a contract to see key legal terms automatically highlighted with simple definitions.
+            Upload a contract to see the key legal terms automatically highlighted with simple definitions!
         </p>
 
         <a href="{{ url_for('upload_file') }}" class="button">Start Upload</a>
+
+        <p class="warning">
+            Please note that LexBase does not offer any type of legal advice, nor does it substitute professional legal help.
+        </p>   
 
         <footer>
             <p>Contact: hello@lexbase.co.uk</p>
