--- a/templates/index.html
+++ b/templates/index.html
@@ -54,9 +54,10 @@ h1 {
 }
 
 .warning {
-    font-size: 16px;
+    font-size: 14px;
     margin-bottom: 30px;
     line-height: 1.5;
+    font-style: italic;
 
 }
         
